more responsive bugs squashed

--- a/assets/css/_bottom.styl
+++ b/assets/css/_bottom.styl
@@ -34,17 +34,24 @@ height 					= 1016px
 		width			100%
 		max-width		303px
 		margin-bottom	60px
+		padding-bottom	15px
+		
 		
 
 
 //- football basketball stopwatch
-.card:first-child .row::nth-child(2)
-	padding-top			0px
+//.card:first-child .row::nth-child(2)
+//	padding-top			0px
 	
 
 
 .trophy
 	padding-bottom		50px
+	
+
+@media only screen and (max-width: 991px)
+	.trophy
+		padding-bottom	15px
 	
 
 .seal
